Création bouton menu

--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
   </head>
   <body>
     <link rel="shortcut icon" type="image/x-icon" href="img/top.svg" />
+    <div class="paris">
+      <div class="notreDame">
+        <div class="murG"></div>
+        <div class="murD"></div>
+        <div class="toit"></div>
+      </div>
+    </div>
     <main role-aria="main" class="notBackStyle">
       <h1>Faîtes entrez votre voie dans la Légende</h1>
       <div class="voieSelector">
         <div class="voie">
           <div data-id="1" class="thumbnail">
-            <img src='C:/Loutre.jpg' alt='♥ _ ♥' />
+            <img src="C:/Loutre.jpg" alt="♥ _ ♥" />
             <div class="back3d backTop"></div>
             <div class="back3d backBot"></div>
             <div class="back3d backRight"></div>
